Update Google Maps link to shortened URL

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="info-item">
                         <span class="label">地図 / 地图：</span>
-                        <span class="value"><a href="https://www.google.com/maps?q=東京都豊島区西池袋3-20-1" target="_blank" style="color: #e74c3c; text-decoration: underline;">Google Mapsで見る / 在Google地图查看</a></span>
+                        <span class="value"><a href="https://maps.app.goo.gl/dvnUcDbs3QBi44Vp9" target="_blank" style="color: #e74c3c; text-decoration: underline;">Google Mapsで見る / 在Google地图查看</a></span>
                     </div>
                 </div>
             </section>
