Add X mark to park clarification note

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="info-item">
                         <span class="label">主催場所 / 举办地点：</span>
                         <span class="value">西池袋公園（東京都豊島区西池袋3-20-1）<br>
-                        ※池袋西口公園ではありません / 不是池袋西口公园</span>
+                        ※池袋西口公園ではありません(✖) / 不是池袋西口公园(✖)</span>
                     </div>
                     <div class="info-item">
                         <span class="label">主催時間 / 举办时间：</span>
