--- a/index.html
+++ b/index.html
@@ -221,28 +221,28 @@
 
             <section class="gachi-chuka">
                 <h2>池袋ガチ中華</h2>
-                <div class="link-grid">
-                    <div class="link-card restaurant-card">
-                        <h3>牛家兄弟 蘭州牛肉麺 池袋本店</h3>
+                <div class="restaurant-grid">
+                    <div class="restaurant-card">
+                        <div class="restaurant-name">牛家兄弟 蘭州牛肉麺 池袋本店</div>
                         <span class="halal-badge">Halal</span>
-                        <p>〒171-0014 東京都豊島区池袋2丁目13−8 大久保商事ビル</p>
-                        <a href="https://maps.google.com/?q=東京都豊島区池袋2丁目13-8" target="_blank" class="btn">地図を見る</a>
+                        <div class="restaurant-address">〒171-0014 東京都豊島区池袋2丁目13−8 大久保商事ビル</div>
+                        <a href="https://maps.google.com/?q=東京都豊島区池袋2丁目13-8" target="_blank" class="map-link">地図を見る</a>
                     </div>
-                    <div class="link-card restaurant-card">
-                        <h3>唇辣道</h3>
-                        <p>〒171-0021 東京都豊島区西池袋1丁目38−3 B1F</p>
-                        <a href="https://maps.google.com/?q=東京都豊島区西池袋1丁目38-3" target="_blank" class="btn">地図を見る</a>
+                    <div class="restaurant-card">
+                        <div class="restaurant-name">唇辣道</div>
+                        <div class="restaurant-address">〒171-0021 東京都豊島区西池袋1丁目38−3 B1F</div>
+                        <a href="https://maps.google.com/?q=東京都豊島区西池袋1丁目38-3" target="_blank" class="map-link">地図を見る</a>
                     </div>
-                    <div class="link-card restaurant-card">
-                        <h3>HALAL中華 阿丽娅アリヤ</h3>
+                    <div class="restaurant-card">
+                        <div class="restaurant-name">HALAL中華 阿丽娅アリヤ</div>
                         <span class="halal-badge">Halal</span>
-                        <p>〒171-0021 東京都豊島区西池袋1丁目43−3 2F</p>
-                        <a href="https://maps.google.com/?q=東京都豊島区西池袋1丁目43-3" target="_blank" class="btn">地図を見る</a>
+                        <div class="restaurant-address">〒171-0021 東京都豊島区西池袋1丁目43−3 2F</div>
+                        <a href="https://maps.google.com/?q=東京都豊島区西池袋1丁目43-3" target="_blank" class="map-link">地図を見る</a>
                     </div>
-                    <div class="link-card restaurant-card">
-                        <h3>座・麻婆唐府 池袋店</h3>
-                        <p>〒171-0021 東京都豊島区西池袋1丁目38−3 3F</p>
-                        <a href="https://maps.google.com/?q=東京都豊島区西池袋1丁目38-3" target="_blank" class="btn">地図を見る</a>
+                    <div class="restaurant-card">
+                        <div class="restaurant-name">座・麻婆唐府 池袋店</div>
+                        <div class="restaurant-address">〒171-0021 東京都豊島区西池袋1丁目38−3 3F</div>
+                        <a href="https://maps.google.com/?q=東京都豊島区西池袋1丁目38-3" target="_blank" class="map-link">地図を見る</a>
                     </div>
                 </div>
             </section>
